# alpha-PPO-code

./: .gitignore  AGENTS.md  CLAUDE.md  evaluate.md  pyproject.toml  requirements.txt
.trellis/: .template-hashes.json
K-param/: 实验目标.docx
Nexperiment/: log.txt
alpha-schedule-sb3/: .gitignore  README.md  colab_train_ppo.ipynb  main.py  pyproject.toml
alpha-schedule-sb3/src/alphasched/: __init__.py
alpha-schedule-sb3/src/alphasched/baselines/: __init__.py  bbo.py  ga.py  mapso.py  pso.py  rules.py  types.py
alpha-schedule-sb3/src/alphasched/cli/: baselines.py  compare_legacy.py  eval_ppo.py  export_excel.py  gpsearch.py  train_ppo.py
alpha-schedule-sb3/src/alphasched/compat/: enjoy.py  main.py  testPolicy.py
alpha-schedule-sb3/src/alphasched/config/: __init__.py  env.py
alpha-schedule-sb3/src/alphasched/core/: __init__.py  features.py  generator.py  instance.py  simulator.py
alpha-schedule-sb3/src/alphasched/envs/: __init__.py  parallel_machine_twt.py
alpha-schedule-sb3/src/alphasched/logging/: __init__.py  metrics.py  runs.py
alpha-schedule-sb3/src/alphasched/rl/: __init__.py  callbacks.py  models.py  sb3_policy.py
alpha-schedule-sb3/src/alphasched/search/: __init__.py  beam.py  gpsearch.py  policy.py  rollout.py
alpha-schedule-sb3/tests/: conftest.py  test_core_invariants.py  test_paper_table_35_15.py
machGeneration/: 实验目标.docx
new-GA-V0.010/: gaMain.py  iterAdd.sh  para-ga-run.sh  run.sh
old_ver_code/: requirements.txt
partGene/: 实验目标.docx
pso/: 实验目标.docx
rule/: 实验目标.docx
sci-1/: 实现目标.docx
tmp_scripts/: extract_min_avg.py
(+180 files in other folders)
